# LibreLedger

./: .gitignore  .test.env  CMakeLists.txt  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
LibreLedger/: CMakeLists.txt  LibreLedger.cpp  LibreLedger.h
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: c5a1f06963d7_create_initial_tables.py  da467a25fe7f_seed_currencies.py
apps/backend/docker/: Dockerfile
apps/backend/src/: main.py
apps/backend/src/database/: database.py  dependencies.py
apps/backend/src/db/: database.py
apps/backend/src/models/: __init__.py  currency.py  entry.py  fiscal_year.py  ledger_account.py  ledger_account_budget.py  transaction.py
apps/backend/src/router/: router.py
apps/backend/src/router/fiscal_year/: fiscal_year_uuid.py  router.py
apps/backend/src/schema/: currency.py  fiscal_year.py  response.py
apps/backend/src/service/: fiscal_year.py
apps/backend/tests/: conftest.py
apps/backend/tests/api/: test_delete_fiscal_year.py  test_get_fiscal_year.py  test_health.py  test_list_fiscal_year.py  test_post_fiscal_year.py  test_put_fiscal_year.py
apps/backend/tests/router/: test_router.py
apps/frontend/: package.json
docker/: compose.yaml
include/entities/: Account.h  Currency.h  Role.h
include/model/: Account.h  Address.h  Currency.h  Groupe.h  Transaction.h  User.h
promts/: tests.md
src/: main.cpp
src/model/: Account.cpp  Address.cpp  Currency.cpp  Groupe.cpp  Role.cpp  Transaction.cpp  User.cpp
tools/: generate-keys.ps1  generate-keys.sh  getTree.ps1
