[tool.poetry]
name = "libreledger"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["Jan Zeugin <jan.zeugin@outlook.com>"]
readme = "README.md"
packages = [
    { include = "src", from = "apps/backend" }
]

[tool.poetry.dependencies]
python = ">=3.13"
fastapi = "^0.116.1"
sqlalchemy = "^2.0.41"
dotenv = "^0.9.9"
uvicorn = "^0.35.0"
psycopg2 = "^2.9.11"
alembic = "^1.18.3"
python-dotenv = "^1.2.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
